<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRecipeActivity">

    <TextView
        android:id="@+id/text_create_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_recipe_message"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_label"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/text_create_recipe"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edittext_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        app:layout_constraintTop_toBottomOf="@+id/label_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/label_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_label"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edittext_name"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:id="@+id/ingredients_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/label_ingredients"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/add_ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Ingredient"
        app:layout_constraintTop_toBottomOf="@+id/ingredients_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/label_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_label"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edittext_instructions"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/instructions_hint"
        android:textColorHint="@android:color/black"
        android:inputType="textMultiLine"
        android:background="@drawable/edittext_background"
        android:textColor="@android:color/black"
        android:paddingLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/label_instructions"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/save_recipe"
        android:layout_width="270dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save_button"
        android:layout_marginBottom="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
