<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGroceryListActivty">

    <TextView
        android:id="@+id/text_create_grocery_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_grocery_list_message"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edittext_ingredients"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/create_grocery_list_hint"
        android:textColorHint="@android:color/black"
        android:inputType="textMultiLine"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_background"
        android:textColor="@android:color/black"
        android:paddingLeft="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_create_grocery_list" />

    <Button
        android:id="@+id/save_grocery_list"
        android:layout_width="270dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save_button"
        android:layout_marginBottom="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
