<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateMealActivity">

    <TextView
        android:id="@+id/breakfast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast_text"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/breakfast_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/breakfast_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/lunch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_text"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/breakfast_spinner"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/lunch_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/lunch_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/dinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_text"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/lunch_spinner"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Spinner
        android:id="@+id/dinner_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/dinner_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/save_meal_plan_button"
        android:layout_width="270dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/save_button"
        android:layout_marginBottom="40dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

