<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="5dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_meal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/breakfast_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast_text"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/breakfast_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/breakfast_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="16dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lunch_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lunch_text"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/lunch_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/lunch_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="16dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/dinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dinner_text"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/dinner_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:id="@+id/dinner_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:padding="16dp" />

    </androidx.cardview.widget.CardView>

</LinearLayout>

